# RANSAC_parallel

./: 7.pgm  8.pgm  CMakeLists.txt  SubplotImgs.hpp  Util.c  correctness_check.cpp  dum1.pgm  dum2.pgm  feature_matcher.cpp  feature_matcher_sift.cpp  feature_matcher_sift_mpi.cpp  feature_matcher_sift_parallel.cpp  plots.py  sift_Ransac.cpp  sift_scratch.py
Sift_detector/: CMakeLists.txt  sift_detector.cpp  sift_detector_parallel_mpi.cpp  sift_detector_script.cpp
submission/: sift_Ransac.cpp
