cmake_minimum_required(VERSION 2.8)
project( feature_matcher_sift_parallel)
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
find_package( OpenCV REQUIRED )
add_executable( feature_matcher_sift_parallel feature_matcher_sift_parallel.cpp )
target_link_libraries( feature_matcher_sift_parallel ${OpenCV_LIBS})
