cmake_minimum_required(VERSION 2.8)
project( sift_detector )
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
find_package( OpenCV REQUIRED )
add_executable( sift_detector sift_detector.cpp )
target_link_libraries( sift_detector ${OpenCV_LIBS})

add_executable( sift_detector_script sift_detector_script.cpp )
target_link_libraries( sift_detector_script ${OpenCV_LIBS})
